--- a/cmd/wallet-web/package.json
+++ b/cmd/wallet-web/package.json
@@ -43,6 +43,7 @@
     "babel-eslint": "^10.0.3",
     "dot-prop": ">=4.2.1",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-vue": "^5.0.0",
     "highlight.js": ">=10.4.1",
@@ -62,8 +63,10 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/recommended",
+      "eslint:recommended",
+      "prettier",
+      "prettier/vue"
     ],
     "rules": {
       "no-console": "off"
