chore: upgraded tailwindcss, autoprefixer, postcss, sass, prettier, @vue/cli-plugin-router
Signed-off-by: Anton Biriukov <anton.biriukov@securekey.com>

--- a/cmd/wallet-web/package.json
+++ b/cmd/wallet-web/package.json
@@ -36,7 +36,7 @@
     "@nuxtjs/vuetify": "^1.11.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "4.2.3",
+    "@vue/cli-plugin-router": "^4.5.13",
     "@vue/cli-service": "^4.1.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
@@ -48,12 +48,12 @@
     "eslint-plugin-vue": "^5.0.0",
     "highlight.js": ">=10.4.1",
     "node-forge": ">=0.10.0",
-    "postcss": "^7.0.36",
-    "prettier": "1.19.1",
-    "sass": "1.26.2",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
+    "sass": "^1.35.2",
     "sass-loader": "8.0.2",
     "serialize-javascript": ">=3.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
+    "tailwindcss": "^2.2.4",
     "vue-template-compiler": "^2.6.10",
     "yargs-parser": ">=18.1.2"
   },
